<resources>

    <string name="app_name">Project Blue Water</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_stream_media">Stream Media</string>
    <string name="title_activity_browse_library">Project Blue Water</string>
    <string name="title_activity_set_up_connection">Connection Settings</string>
    <string name="title_activity_select_library">Select Library</string>
    <string name="lbl_user_name">User Name:</string>
    <string name="lbl_access_code">Access Code:</string>
    <string name="lbl_password">Password:</string>
    <string name="lbl_local_only">Local Connections Only</string>
    <string name="btn_connect">Connect!</string>
    <string name="user_name_value" />
    <string name="password_value"></string>
    <string name="access_code"></string>
    <string name="title_activity_file_view">File View</string>
    <string name="title_activity_view_now_playing">Now Playing</string>
    <string name="lbl_song_title">Now Playing</string>
    <string name="lbl_song_artist">Now Playing Artist</string>
    <string name="img_now_playing">Now Playing Album Image</string>
    <string name="btn_view_files">View Files</string>
    <string name="btn_shuffle_files">Shuffle</string>
    <string name="btn_play_files">Play All</string>
    <string name="lbl_now_playing">Now Playing</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_browse_library">Browse Library</string>
    <string name="lbl_connection_lost">Your connection has been lost. Reconnect?</string>
    <string name="lbl_connection_lost_title">Connection Lost</string>
    <string name="lbl_waiting_for_connection">The connection with the server has been lost. %1$s is attempting to reconnect.</string>
    <string name="btn_connecting">Connecting</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
</resources>