<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_dark" >

    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/lbl_song_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvSongArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSongTitle"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/lbl_song_artist"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sbNowPlaying"
        android:layout_centerHorizontal="true" />

     <SeekBar
         android:id="@+id/sbNowPlaying"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/llNpButtons"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="47dp" />

	<LinearLayout
	    android:id="@+id/llNpButtons"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:orientation="horizontal"
	    android:paddingLeft="2dip"
	    android:paddingRight="2dip" >

	    <ImageButton
	        android:id="@+id/btnPrevious"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:background="?android:attr/selectableItemBackground"
	        android:contentDescription="@string/btn_previous"
	        android:src="@drawable/av_rewind" />

	    <ViewFlipper 
	        android:layout_width="0dip"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:id="@+id/vfPlayPause">
		    
		    <ImageButton
		        android:id="@+id/btnPlay"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="?android:attr/selectableItemBackground"
		        android:contentDescription="@string/btn_play"
		        android:src="@drawable/av_play" />
	
		    <ImageButton
		        android:id="@+id/btnPause"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="?android:attr/selectableItemBackground"
		        android:contentDescription="@string/btn_pause"
		        android:src="@drawable/av_pause" />
	    </ViewFlipper>

	    <ImageButton
	        android:id="@+id/btnNext"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:background="?android:attr/selectableItemBackground"
	        android:contentDescription="@string/btn_next"
	        android:src="@drawable/av_fast_forward" />
	</LinearLayout>
    
</RelativeLayout>